// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.


syntax = "proto3";

package OpcGrpcConnect;

service Http {

  rpc ReadOpcNodes (ReadRequest) returns (ReadResponse) {}

  rpc WriteOpcNode (WriteRequest) returns (WriteResponse) {}
  
}

// The request message containing the nodes displayNames to read
message  ReadRequest {
  repeated string names = 1;
}

message WriteRequest {
  string name = 1;
  string value = 2;
}

message  ReadResponse {
  repeated NodeValue nodes = 1;
  bool isError = 2;
  string errorMessage = 3 ;
}

message WriteResponse {
  bool isError = 1;
  string errorMessage = 2 ;
}

message NodeValue {
  string name = 1;
  string value = 2 ;
  string timestamp = 3; // format ISO 8601 - UTC
  string type = 4;      // int, bool, float, string
}

